# tendies-factory

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: backtest.py
src/options_trader/: config.py
src/options_trader/brokers/: __init__.py
src/options_trader/engine/: backtest.py
src/options_trader/options/: pricing.py  selector.py
src/options_trader/strategy/: indicators.py  intraday_vwap_rsi.py
