[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tendies-factory"
version = "0.1.0"
description = "Intraday options trading scaffold with VWAP+RSI, Black–Scholes contract selection, and a paper backtester."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "numpy>=2.0",
  "loguru>=0.7",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "yfinance>=0.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
